--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -1,5 +1,5 @@
 
-<img src="../assets/images/logo.png" class="img-responsive" alt="Cinque Terre" width="200" height="100" >
+<img src="" class="img-responsive" alt="Cinque Terre" width="200" height="100" >
 <div class="container-fluid" style="position: relative;top:70px;font-size:20px;">
    <!--div class="row" *ngIf="false">
       <div class="col-sm-3" style="background-color: #3396ec;"></div>
